--- a/kcrypto/build.gradle
+++ b/kcrypto/build.gradle
@@ -33,6 +33,9 @@ test {
 //    afterTest { desc, result ->
 //        //logger.quiet "Executing test ${desc.name} [${desc.className}] with result: ${result.resultType}"
 //    }
+    minHeapSize = "128m"
+    maxHeapSize = "2048m"
+
     useJUnitPlatform()
     testLogging {
         exceptionFormat = 'full'
