--- a/kcrypto/build.gradle
+++ b/kcrypto/build.gradle
@@ -14,11 +14,12 @@ dokka {
 }
 
 dependencies {
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     //compile fileTree(dir: new File(rootDir, 'bc-java jars'), include: '*.jar')
     
-        compile fileTree(dir: new File(rootDir, 'bc jars'), include: '*.jar')
+        compile fileTree(dir: new File(rootDir, 'bc-jars-reg'), include: '*.jar')
         
         compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.40'
 
