--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ build:
   stage: test
   script:
     - "apply_overlay bc-java ./"
-    - "sh fetchbeta.sh \"jdk18on-172b12\" \"./bc-jars-reg\""
+    - "sh installbetas.sh \"jdk18on-172b12\" \"./bc-jars-reg\""
     - ". cienv.sh; \ gradle clean build"
   
